# pinf

./: .gitignore  AGENTS.md  AUTH_TEST_GUIDE.md  CLAUDE.md  REFACTOR_PLAN.md  docker-compose.yml  package-lock.json  package.json  quick_test.ps1  应用原型.html
WA/: FRAMEWORK_SETUP.md  app.config.ts  package-lock.json  package.json  tmp-check.tsx  tsconfig.json
WAend/: DEV_PLAN.md  app.json  package-lock.json  package.json
app_end/: README.md  app.config.ts  app.json  eas.json  google-services.json  package-lock.json  package.json  tmp.vitest.config.nojest.ts  tmp.vitest.no-setup.config.ts  tmp.vitest.setup.nojest.ts  tsconfig.json  vitest.config.ts  (+5 more)
backend/: .dockerignore  .env.example  .gitignore  API测试指南.md  DEV_PLAN_BACKEND.md  Dockerfile  README.md  app.py  config.py  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  后端api(1).md
backend/models/: __init__.py  appointment.py  baby.py  chat.py  child.py  content.py  device_token.py  growth.py  notification_subscription.py  sync_state.py  user.py  verification_code.py
backend/models/tests/: test_user.py
backend/routes/: appointment.py  auth.py  baby.py  chat.py  child.py  content.py  devices.py  growth.py  notifications.py
backend/routes/tests/: test_appointment_routes.py
backend/utils/: appointment_status.py  auth.py  db_migrations.py  n8n_client.py  notification_listener.py  notification_scheduler.py  notification_sender.py  wechat.py  wechat_content_sync.py  wechat_official.py  wechat_sync_scheduler.py
backend/utils/tests/: test_appointment_status.py  test_notification_listener.py
(+306 files in other folders)
