[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.10.4",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "flask-jwt-extended==4.5.2",
    "flask-sqlalchemy==3.0.5",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["routes/tests", "models/tests", "utils/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
